Move whitespace mode to prog-mode only

--- a/lain/.emacs.d/config.org
+++ b/lain/.emacs.d/config.org
@@ -105,13 +105,14 @@ Make yes-or-no prompts ask for y or n instead
 
 (add-hook 'prog-mode-hook #'foltz-disable-tabs)
 
-(global-whitespace-mode)
 (setq whitespace-style '(face tabs tab-mark trailing))
 (custom-set-faces
    '(whitespace-tab ((t (:foreground "#636363")))))
 
 (setq whitespace-display-mappings
    '((tab-mark 9 [124 9] [92 9])))
+
+(add-hook 'prog-mode-hook #'whitespace-mode)
 #+END_SRC
 ** Keep backup files and lockfiles out of the way
 By default, emacs makes files like =file~= and =#file#= and clutters up
